--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,17 @@ jobs:
       # Runs git-filter-repo to filter the repo.
       - name: Filter repo
         run: |
+          pwd
+          cd split-sub-directory
+          pwd
           git filter-repo --path=examples/example1/ --path-rename=examples/example1/:
 
       # Git operations
       - name: Git operations
         run: |
+          pwd
+          cd split-sub-directory
+          pwd
           eval `ssh-agent -s`
           ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
           # diagnostics
