--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
@@ -40,17 +41,16 @@ jobs:
           cd split-sub-directory
           pwd
           git filter-repo --path=examples/example1/ --path-rename=examples/example1/:
+          echo cp -R . ../.
+          cp -R . ../.
+          echo rmdir split-sub-directory
+          rmdir split-sub-directory
 
       # Git operations
       - name: Git operations
         run: |
-          pwd
-          cd split-sub-directory
-          pwd
-          eval `ssh-agent -s`
-          ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
-          # diagnostics
-          echo git remote add origin https://github.com/diarmidmackenzie/sample-example
-          git remote add origin https://github.com/diarmidmackenzie/sample-example
-          echo git push -u origin main
-          git push -u origin main
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
