--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
+          git remote add origin "git@github.com:diarmidmackenzie/sample-example.git"
           git add .
           git commit -m "generated"
-          git push
+          git push origin
