--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,4 +55,4 @@ jobs:
           git remote add origin "git@github.com:diarmidmackenzie/sample-example.git"
           git add .
           git commit -m "generated"
-          git push origin
+          git push --set-upstream origin main
