--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,58 +1,21 @@
-# Workflow to mirror examples to other repos
-
-name: Update
-
-# Controls when the workflow will run
-on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: Fetch updates to latest code from master repo
+on: workflow_dispatch
 jobs:
-  # This workflow contains a single job called "build"
-  mirror:
-    # The type of runner that the job will run on
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip3 install git-filter-repo
-          
-      # Check out main repo
-      - name: Check out main repo
+      - name: Pull latest version
         run: |
           git clone https://github.com/diarmidmackenzie/split-sub-directory
-          pwd
-          cd split-sub-directory
-          pwd
-
-      # Runs git-filter-repo to filter the repo.
-      - name: Filter repo
-        run: |
-          pwd
-          cd split-sub-directory
-          pwd
-          git filter-repo --path=examples/example1/ --path-rename=examples/example1/:
-          echo cp -R . ../.
-          cp -R . ../.
-          cd ..
-          echo rm -r split-sub-directory
+          cp -R split-sub-directory/examples/example1/* .
           rm -r split-sub-directory
 
-      # Git operations
-      - name: Git operations
+      - name: Push to Git
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git remote add origin "git@github.com:diarmidmackenzie/sample-example.git"
           git add .
-          git commit -m "generated"
-          git push --set-upstream origin main
+          git commit -m "Updated from latest code"
+          git push
+
